--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piyush's Personal Website</title>
 </head>
-<body>
+<body style="background-color:#b4b4b4;">
     <table >
         <tr>
             <td><img height="200" style="border-radius: 50%;" src="Image/IMG_20210118_213419.jpg" alt="Piyush Sharma"></td>
